# ml_design_patterns

./: pyproject.toml
tests/: test_ml_design_patterns.py
